--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -39,6 +41,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.475.0",
+    "maath": "^0.10.7",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -46,6 +49,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.10.3",
+    "react-parallax-tilt": "^1.7.228",
+    "react-typewriter-effect": "^1.1.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
